--- a/main/templates/includes/header/header.html
+++ b/main/templates/includes/header/header.html
@@ -48,13 +48,13 @@
                     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;"> -->
     <nav class="navbar bg-light fixed-top bg-light d-sm-block d-lg-none">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Student Focus</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">Student Focus <span style="font-size: small;">Dissertation</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Student Focus</h5>
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Student Focus <span style="font-size: small;">Dissertation</span></h5>
                      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
             <div class="offcanvas-body">
