--- a/main/templates/includes/header/logo.html
+++ b/main/templates/includes/header/logo.html
@@ -1,5 +1,5 @@
 <a class="navbar-brand" href="{{ url_for('index') }}">
-    Student Focus
+    Student Focus <span style="font-size: small;">Dissertation</span>
 </a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
