--- a/main/templates/social/post/social_post_list.html
+++ b/main/templates/social/post/social_post_list.html
@@ -77,7 +77,7 @@
 
 <br>
 
-{{ blue_tile(title = 'Why not ask a post?', description = 'You never know, someone else might have the answer you\'re looking for', link = url_for('socials.social_post_add'), link_text = 'I have a Post') }}
+{{ blue_tile(title = 'Have something on your mind?', description = 'Create a post for others to see', link = url_for('socials.social_post_add'), link_text = 'Create Post') }}
 
 <br><br><br>
 
