--- a/main/templates/helpers/cards.html
+++ b/main/templates/helpers/cards.html
@@ -1,8 +1,17 @@
 {# reference: https://ttl255.com/jinja2-tutorial-part-5-macros/ #}
-{% macro card(img_source = none, img_alt = none, title = none, description = none, link = none, link_text = none, link_streached = true, link_2 = none, link_text_2 = none, link_streached_2 = false, width = 47) %}
-<div class="card m-1" style="width: {{ width }}%;">
+<!-- desktop only -->
+{% macro card(img_source = none, img_alt = none, img_icon = false, title = none, description = none, link = none, link_text = none, link_streached = true, link_new_tab = false, link_2 = none, link_text_2 = none, link_streached_2 = false, link_2_new_tab = false, width = 47) %}
+<div class="card m-1 d-none d-md-none d-lg-block" style="width: {{ width }}%;">
     {% if img_source %}
-    <img src="{{ img_source }}" class="card-img-top" alt="{{ img_alt }}">
+    <div style="height:400px;" class="text-center">
+        <img src="{{ img_source }}" class="card-img-top p-3" alt="{{ img_alt }}" 
+        {% if img_icon == true %}
+        style="max-width:100%; max-height:300px; width: auto; height: auto; margin: 50px 0 50px 0;"
+        {% else %}
+        style="max-width:100%; max-height:400px; width: auto; height: auto;"
+        {% endif %}
+        >
+    </div>
     {% endif %}
 
     <div class="card-body">
@@ -17,13 +26,52 @@
         <div class="row">
             {% if link %}
             <div class="col">
-                <a href="{{ link }}" class="{% if link_streached == true %}stretched-link{% endif %}">{{ link_text }}</a>
+                <a href="{{ link }}" class="{% if link_streached == true %}stretched-link{% endif %}" {% if link_new_tab == true %}target="_blank"{% endif %}>{{ link_text }}</a>
             </div>
             {% endif %}
 
             {% if link_2 %}
             <div class="col text-end">
-                <a href="{{ link_2 }}" class="{% if link_streached_2 == true %}stretched-link{% endif %}">{{ link_text_2 }}</a>
+                <a href="{{ link_2 }}" class="{% if link_streached_2 == true %}stretched-link{% endif %}" {% if link_2_new_tab == true %}target="_blank"{% endif %}>{{ link_text_2 }}</a>
+            </div>
+            {% endif %}
+        </div>
+    </div>
+</div>
+
+<!-- mobile only -->
+<div class="card m-1 d-block d-md-block d-lg-none" style="width: 100%;">
+    {% if img_source %}
+    <div class="text-center">
+        <img src="{{ img_source }}" class="card-img-top p-3" alt="{{ img_alt }}" 
+        {% if img_icon == true %}
+        style="max-width:100%; max-height:150px; width: auto; height: auto;"
+        {% else %}
+        style="max-width:100%; max-height:400px; width: auto; height: auto;"
+        {% endif %}
+        >
+    </div>
+    {% endif %}
+
+    <div class="card-body">
+        {% if title %}
+        <h5 class="card-title">{{ title }}</h5>
+        {% endif %}
+
+        {% if description %}
+        <p class="card-text">{{ description }}</p>
+        {% endif %}
+        
+        <div class="row">
+            {% if link %}
+            <div class="col">
+                <a href="{{ link }}" class="{% if link_streached == true %}stretched-link{% endif %}" {% if link_new_tab == true %}target="_blank"{% endif %}>{{ link_text }}</a>
+            </div>
+            {% endif %}
+
+            {% if link_2 %}
+            <div class="col text-end">
+                <a href="{{ link_2 }}" class="{% if link_streached_2 == true %}stretched-link{% endif %}" {% if link_2_new_tab == true %}target="_blank"{% endif %}>{{ link_text_2 }}</a>
             </div>
             {% endif %}
         </div>
