--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -7,7 +7,7 @@
                 - {{ title }}
             {% endif %}
         </title>
-        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}"/>
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}"/>
 
         <!-- using Bootstrap 5.2.3 for quick styling-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -28,7 +28,7 @@
             </div>
             {% endif %}
             
-            <div class="scrollarea" style="max-height: 93vh; width: 100%">
+            <div class="scrollarea hidden-scroll" style="max-height: 93vh; width: 100%">
                 <div class="container" style="min-height: 81vh;">
                     {% include 'includes/flash_msg.html' %}
                     
