--- a/main/templates/module/module_layout.html
+++ b/main/templates/module/module_layout.html
@@ -7,7 +7,7 @@
             <h2>{{ module.code }} - {{ module.name }}</h2>
         </div>
         {#% set rating = 3 %#}
-        <div class="col-4 text-end">
+        {# <div class="col-4 text-end">
             {% set solid_star = "<i class='fa-solid fa-star' style='color: rgb(146, 127, 17); font-size: 20px'></i>" %}
             {% set open_star = "<i class='fa-regular fa-star' style='color: rgb(146, 127, 17); font-size: 20px'></i>" %}
             
@@ -35,10 +35,10 @@
                 {{ open_star | safe }}
                 {% endfor %}
                 #}
-        </div>
+        {# </div> #}
     </div>
 
-    <hr>
+    <hr class="text-muted">
 
     {% block module %}
     
