--- a/main/templates/student/student_home.html
+++ b/main/templates/student/student_home.html
@@ -1,51 +1,261 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<h1>This is your Student Home Page</h1>
+{% from "helpers/cards.html" import card %}
 
-<hr>
+<!-- <h1>This is your Student Home Page</h1>
+
+<hr class="text-muted"> -->
 <br>
-
-
-<h3>Lectures today</h3>
-There are no lectures today, few
-
-<br>
-<br>
-
-<h6>Think this is wrong?</h6>
-<a href="" class="btn btn-secondary">Add a Lecture</a>
-
-<br>
-<br>
-
-<hr>
-
-<br>
-
-<h3>Recent Recources</h3>
-No resources have been added yet
-
-<br>
-<br>
-
-<h6>Why not add something</h6>
-<a href="" class="btn btn-secondary">Add a Resource</a>
+<!-- the newest question -->
+<div class="d-flex flex-wrap p-2">
+    <div class="col">
+        <h3>Latest Question</h3>
+        <span><em>In need of an Answer</em></span>
+    </div>
+    <div class="">
+        <a href="{{ url_for('modules.module_question_add') }}" class="btn btn-secondary">I have a Question</a>
+    </div>
+</div>
+<div class="d-flex flex-wrap p-2">
+{% set temp = latest_question.title|truncate(40, True) + ' - ' + latest_question.module.code %}
+{{ card(
+    title = temp,
+    description = latest_question.description|truncate(300, True) if latest_question.description else None,
+    link = url_for('modules.module_question_single', question_id = latest_question.id),
+    link_text = 'See More',
+    width = 100
+) }}
+</div>
 
 <br>
+<a href="{{ url_for('modules.module_question') }}" class="btn btn-secondary">See All Questions</a>
+
+<br>
 <br>
 
-<hr>
+<hr class="text-muted">
+
+<br>
+<!-- the newest question -->
+<div class="d-flex flex-wrap p-2">
+    <div class="col">
+        <h3>Latest Post</h3>
+    </div>
+    <div class="">
+        <a href="{{ url_for('modules.module_question_add') }}" class="btn btn-secondary">Post Something</a>
+    </div>
+</div>
+<div class="d-flex flex-wrap p-2">
+{% set temp = latest_question.title|truncate(40, True) + ' - ' + latest_question.module.code %}
+{{ card(
+    title = temp,
+    description = latest_question.description|truncate(300, True) if latest_question.description else None,
+    link = url_for('modules.module_question_single', question_id = latest_question.id),
+    link_text = 'See More',
+    width = 100
+) }}
+</div>
+
+<br>
+<a href="{{ url_for('modules.module_question') }}" class="btn btn-secondary">See All Posts</a>
+
+<br>
+<br>
+
+<hr class="text-muted">
+
+<br>
+
+<!-- resources -->
+<div class="d-flex flex-wrap p-2">
+    <div class="col">
+        <h3>Recent Recources</h3>
+    </div>
+    <div class="">
+        <a href="{{ url_for('modules.module_resource_add') }}" class="btn btn-secondary">Add a Resource</a>
+    </div>
+</div>
+<!-- <\ all resources will appeare here - paginated \> -->
+{% if resources %}
+{% if resources.pages > 0 %}
+<div class="d-flex flex-wrap p-2">
+    {% for resource in resources.items %}
+    
+    {# image #}
+    {% if resource.image %}
+    {% set image_name = 'uploads/img/' + resource.image_id +'.png' %}
+    {% set image_title = resource.module.code + ' - ' + resource.image.title|truncate(40, True) %}
+    {{ card(
+        title = image_title,
+        description = resource.image.description|truncate(300, True) if resource.image.description else None,
+        img_source = url_for('static', filename = image_name),
+        link = url_for('modules.module_image_view', module_resource_id = resource.id),
+        link_text = 'View',
+        width = 48
+    ) }}
+
+    {# document #}
+    {% else %}
+    {% set doc_title = resource.module.code + ' - ' + resource.document.title|truncate(40, True) %}
+    {{ card(
+        title = doc_title,
+        description = resource.document.description|truncate(300, True) if resource.document.description else None,
+        img_source = url_for('static', filename = 'images/file-lines-regular.svg'),
+        img_icon = true,
+        link = '#',
+        link_text = 'Download',
+        width = 49
+    ) }}
+    {% endif %}
+    {% endfor %}
+</div>
+
+{% if resources.pages > 1 %}
+{# reference to my past code for pagination: https://github.com/Durigy/neighbourfy-v2/blob/main/main/templates/user/account.html #}
+<!-- Pagination Links-->
+
+<div aria-label="Resource Page Navigation">
+    <ul class="pagination">
+        <li class="page-item">
+            <a href="{{ url_for('modules.module_single', module_id = module_id, resource_page = resources.prev_num) }}" {% if resources.page == 1 %} style="pointer-events: none; cursor: default;" class = "page-link text-secondary"{% else %} class="page-link" {% endif %}>
+                Previous
+            </a>
+        </li>
+
+        {% for page_num in resources.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+        {% if page_num %}
+        
+        <li class="page-item">
+            <a class="page-link {% if page_num == resources.page %} text-danger {% endif %}" href="{{url_for('modules.module_single', module_id = module_id, resource_page = page_num)}}">
+                {{page_num}}
+            </a>
+        </li>
+        
+        {% else %}
+        
+        <li class="page-item">
+            <a class="page-link text-secondary" href="" style="pointer-events: none; cursor: default;">
+                . . .
+            </a>
+        </li>
+        
+        {% endif %}
+        {% endfor %}
+
+        <li class="page-item">
+            <a href="{{ url_for('modules.module_single', module_id = module_id, resource_page = resources.next_num) }}" {% if resources.page == resources.pages %} style="pointer-events: none; cursor: default;" class = "page-link text-secondary"{% else %} class="page-link" {% endif %}>
+                Next
+            </a>
+        </li>
+    </ul>
+</div>
+{% endif %}
+{% endif %}
+
+{% else %}
+<div>
+    <em>There are no resources for the module you follow yet</em>
+</div>
+{% endif %}
+
+<br>
+<br>
+
+<hr class="text-muted">
 
 <br>
 
 <h3>My Notes</h3>
-There are no notes here yet
+<em>Comming Soon</em>
+<!-- There are no notes here yet
 
 <br>
 <br>
 
-<a href="" class="btn btn-secondary">Make a Note</a>
+<a href="" class="btn btn-secondary">Make a Note</a> -->
+
+
+
+<br>
+<br>
+
+<hr class="text-muted">
+
+<br>
+
+<!-- user questions -->
+<div class="d-flex flex-wrap p-2">
+    <h3>My Questions</h3>
+</div>
+
+{% if user_questions.pages > 0 %}
+<div class="d-flex flex-wrap p-2">
+    {% for user_question in user_questions.items %}
+    {% if user_question.solved == True %}
+    {% set temp = user_question.title|truncate(40, True) + ' - ' + user_question.module.code + ' - Solved' %}
+    {% else %}
+    {% set temp = user_question.title|truncate(40, True) + ' - ' + user_question.module.code %}
+    {% endif %}
+    {# reference: https://stackoverflow.com/questions/36458482/how-to-not-render-a-entire-string-with-jinja2 [accessed: 26 Mar 2023] #}
+    {{ card(
+        title = temp,
+        description = user_question.description|truncate(300, True) if user_question.description else None,
+        link = url_for('modules.module_question_single', question_id = user_question.id),
+        link_text = 'See More',
+        width = 100
+    ) }}
+    {% endfor %}
+</div>
+
+{% if user_questions.pages > 1 %}
+{# reference to my past code for pagination: https://github.com/Durigy/neighbourfy-v2/blob/main/main/templates/user/account.html #}
+<!-- Pagination Links-->
+
+<div aria-label="Question Page Navigation">
+    <ul class="pagination">
+        <li class="page-item">
+            <a href="{{ url_for('modules.module_question', question_page = questions.page, user_question_page = user_questions.prev_num) }}" {% if user_questions.page == 1 %} style="pointer-events: none; cursor: default;" class = "page-link text-secondary"{% else %} class="page-link" {% endif %}>
+                Previous
+            </a>
+        </li>
+
+        {% for page_num in user_questions.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+        {% if page_num %}
+        
+        <li class="page-item">
+            <a class="page-link {% if page_num == user_questions.page %} text-danger {% endif %}" href="{{url_for('modules.module_question', question_page = questions.page, user_question_page = page_num) }}">
+                {{page_num}}
+            </a>
+        </li>
+        
+        {% else %}
+        
+        <li class="page-item">
+            <a class="page-link text-secondary" href="" style="pointer-events: none; cursor: default;">
+                . . .
+            </a>
+        </li>
+        
+        {% endif %}
+        {% endfor %}
+
+        <li class="page-item">
+            <a href="{{ url_for('modules.module_question', question_page = questions.page, user_question_page = user_questions.next_num) }}" {% if user_questions.page == user_questions.pages %} style="pointer-events: none; cursor: default;" class = "page-link text-secondary"{% else %} class="page-link" {% endif %}>
+                Next
+            </a>
+        </li>
+    </ul>
+</div>
+{% endif %}
+
+{% else %}
+<div>
+    You haven't asked any questions yet
+</div>
+{% endif %}
+
+<br><br><br>
 
 
 {% endblock content %}
