--- a/main/templates/student/student_note_list.html
+++ b/main/templates/student/student_note_list.html
@@ -3,8 +3,17 @@
 
 {% from "helpers/cards.html" import card %}
 
-<h1>List of Your notes</h1>
 
+<div class="position-relative" style="height: 30vh; width: 45vw">
+    <div class="position-absolute top-50 start-50 text-center">
+        <h1 class="pb-3">Your notes</h1>
+        <hr class="text-muted">
+        <span style="font-size: 5rem;">Comming Soon</span>
+    </div>
+</div>
+
+
+{#
 <div class="d-flex flex-wrap p-2">
     {% for i in range(10) %}
     {% set num = i + 1 %}
@@ -12,5 +21,6 @@
     {{ card(title = temp, link = '#', link_text = 'See More') }}
     {% endfor %}
 </div>
+#}
 
 {% endblock content %}
