--- a/main/templates/module/module_resource_add.html
+++ b/main/templates/module/module_resource_add.html
@@ -63,7 +63,7 @@
         <p class="form-label">Select a Resource type *</p>
         <select name="resource-type" id="resource-type" class="form-select" required>
             <option value="">Select a Resource type</option>
-            <option value="URL">URL</option>
+            <!-- <option value="URL">URL</option> -->
             <option value="FILE">Image or Document</option>
         </select>
 
@@ -115,7 +115,8 @@
 
 <br>
 
-<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.6.0.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 {# reference: https://stackoverflow.com/a/7507471 #}
 <script type="text/javascript">
