--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -17,14 +17,15 @@ html {
 }
 
 body {
-    margin: 0;
     background-color: #fafafa;
+    overflow-y: hidden; /* this prevents the the over scrolling effect when the page over scrolls and glitches when it gets to the bottom of any page */
+    height: 100vh;
 }
 
 
 #container {
     max-width: 900px;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
 }
 
@@ -80,13 +81,19 @@ a:hover {
 
 #########################
 */
-header {
+/* header {
     position: sticky;
     top: 0;
-    height: 70px;
-    width: 100%;
+    /* height: 70px; */
+    /* width: 100%;
     z-index: 999;
-    /* background-color: #bbb; */
+    margin: 0 !important; */
+    /* background-color: #bbb;
+} */
+
+header {
+    position: sticky;
+    z-index: 999;
 }
 
 nav {
@@ -128,8 +135,13 @@ nav a {
     padding-top: 50px;
 }
 
+.spacing {
+    height: max(.5vh, 10px);
+    padding: 0;
+    max-width: 0;
+}
 
-/* reference: https://www.w3schools.com/css/tryit.asp?filename=trycss_forms*/
+/* reference: https://www.w3schools.com/css/tryit.asp?filename=trycss_forms */
 input[type=text], input[type=password], select {
   width: 100%;
   padding: 12px 20px;
@@ -153,10 +165,17 @@ input[type=submit] {
 
 input[type=submit]:hover {
   background-color: #45a049;
+  color: white;
+}
+
+input[type=submit]:focus {
+  background-color: #45a049;
+  outline: solid 4px rgba(103, 137, 230, .6) ;
+  color: white;
 }
 
 
-aside {
+/* aside {
     display: flex;
     flex-wrap: nowrap;
     height: 94vh;
@@ -165,6 +184,15 @@ aside {
     overflow-x: auto;
     overflow-y: hidden;
     margin-top: -15px;
+} */
+
+
+footer {
+    height: 10vh;
+    width: 100%;
+    position: relative;
+    margin: 0;
+    padding: 0;
 }
 
 .scrollarea {
@@ -205,6 +233,10 @@ body::-webkit-scrollbar {
     overflow-y: scroll;
 }
 
+.perm-hidden-scroll::-webkit-scrollbar {
+    display: none;
+}
+
 
 .hidden-scroll .scrollarea::-webkit-scrollbar {
     width: .75rem;
@@ -213,3 +245,22 @@ body::-webkit-scrollbar {
 /* aside .scrollarea::-webkit-scrollbar-thumb {
     border: .125rem solid lightgray;
 } */
+
+
+#send-btn,
+#message-field {
+    font-size: 1rem;
+    margin: 0;
+    height: 50px;
+}
+
+#send-btn {
+    width: 50px;
+    border-radius: 50%;
+    padding: 0;
+}
+
+.aside-text-links {
+    color:  #707071;;
+    text-decoration: none;
+}
